chore: Trying to make module for core
the module-info.java to core is not set up correctly. GSON is not able to be imported in UnitListFileSupport.java

#77